--- a/OrganisationCustomisation/OrganisationCustomisations.CSPROJ
+++ b/OrganisationCustomisation/OrganisationCustomisations.CSPROJ
@@ -83,6 +83,26 @@
       <CanBeDeleted>True</CanBeDeleted>
       <IsHidden>False</IsHidden>
     </Content>
+    <Content Include="WebResources\arup_MicrosoftTeams.html">
+      <WebResourceId>46b67192-2fef-e911-812b-00505690cb20</WebResourceId>
+      <Name>arup_MicrosoftTeams</Name>
+      <DisplayName>Microsoft Teams</DisplayName>
+      <WebResourceType>Html</WebResourceType>
+      <IntroducedVersion>1.0.0.0</IntroducedVersion>
+      <IsCustomizable>True</IsCustomizable>
+      <CanBeDeleted>True</CanBeDeleted>
+      <IsHidden>False</IsHidden>
+    </Content>
+    <Content Include="WebResources\arup_OrganisationRequestChange.html">
+      <WebResourceId>c189464f-25d6-e911-812a-00505690cb20</WebResourceId>
+      <Name>arup_OrganisationRequestChange</Name>
+      <DisplayName>Organisation Request Change</DisplayName>
+      <WebResourceType>Html</WebResourceType>
+      <IntroducedVersion>1.0.0.0</IntroducedVersion>
+      <IsCustomizable>True</IsCustomizable>
+      <CanBeDeleted>True</CanBeDeleted>
+      <IsHidden>False</IsHidden>
+    </Content>
     <Content Include="WebResources\ccrm_account_main_library.js">
       <WebResourceId>cbcdffb3-8189-e611-80ed-005056b55b13</WebResourceId>
       <Name>ccrm_account_main_library.js</Name>
@@ -100,6 +120,26 @@
       <LanguageCode>1033</LanguageCode>
       <WebResourceType>JScript</WebResourceType>
       <IntroducedVersion>1.0</IntroducedVersion>
+      <IsCustomizable>True</IsCustomizable>
+      <CanBeDeleted>True</CanBeDeleted>
+      <IsHidden>False</IsHidden>
+    </Content>
+    <Content Include="WebResources\ccrm_\HTML\ClientOverViewReport.html">
+      <WebResourceId>4c6a808e-8613-e711-80f7-005056b55b13</WebResourceId>
+      <Name>ccrm_/HTML/ClientOverViewReport.html</Name>
+      <DisplayName>ClientOverViewReport.html</DisplayName>
+      <WebResourceType>Html</WebResourceType>
+      <IntroducedVersion>1.0.0.0</IntroducedVersion>
+      <IsCustomizable>True</IsCustomizable>
+      <CanBeDeleted>True</CanBeDeleted>
+      <IsHidden>False</IsHidden>
+    </Content>
+    <Content Include="WebResources\ccrm_\HTML\ConnectionMatrix.html">
+      <WebResourceId>f07ce85a-4198-e711-80ff-005056b509e1</WebResourceId>
+      <Name>ccrm_/HTML/ConnectionMatrix.html</Name>
+      <DisplayName>ConnectionMatrix.html</DisplayName>
+      <WebResourceType>Html</WebResourceType>
+      <IntroducedVersion>1.0.0.0</IntroducedVersion>
       <IsCustomizable>True</IsCustomizable>
       <CanBeDeleted>True</CanBeDeleted>
       <IsHidden>False</IsHidden>
