Updated Opportuntiy solution

--- a/OpportunityCustomisation/OpportunityCustomizations.CSPROJ
+++ b/OpportunityCustomisation/OpportunityCustomizations.CSPROJ
@@ -84,7 +84,7 @@
       <CanBeDeleted>True</CanBeDeleted>
       <IsHidden>False</IsHidden>
     </Content>
-    <Content Include="WebResources\arup_dynamic_display_of_fieldvalue.jscript">
+    <Content Include="WebResources\arup_dynamic_display_of_fieldvalue.js">
       <WebResourceId>90282575-ce1c-ea11-812e-00505690cb20</WebResourceId>
       <Name>arup_dynamic_display_of_fieldvalue</Name>
       <DisplayName>dynamic_display_of_fieldvalue</DisplayName>
@@ -115,7 +115,7 @@
       <CanBeDeleted>True</CanBeDeleted>
       <IsHidden>False</IsHidden>
     </Content>
-    <Content Include="WebResources\arup_Opportunity_Changes.jscript">
+    <Content Include="WebResources\arup_Opportunity_Changes.js">
       <WebResourceId>4ffe8c63-4617-ea11-812e-00505690cb20</WebResourceId>
       <Name>arup_Opportunity_Changes</Name>
       <DisplayName>arup_Opportunity_Changes</DisplayName>
@@ -137,16 +137,7 @@
       <CanBeDeleted>True</CanBeDeleted>
       <IsHidden>False</IsHidden>
     </Content>
-    <Content Include="WebResources\ccrm_opportunity_library_2015.jscript">
-      <WebResourceId>172f9910-585c-e511-80d8-005056b55b13</WebResourceId>
-      <Name>ccrm_opportunity_library_2015</Name>
-      <DisplayName>ccrm_opportunity_library_2015</DisplayName>
-      <WebResourceType>JScript</WebResourceType>
-      <IntroducedVersion>3.15.1.0</IntroducedVersion>
-      <IsCustomizable>True</IsCustomizable>
-      <CanBeDeleted>True</CanBeDeleted>
-      <IsHidden>False</IsHidden>
-    </Content>
+    <Content Include="WebResources\ccrm_opportunity_library_2015.js" />
     <Content Include="WebResources\opportunity_ribbon.js">
       <WebResourceId>623de6ce-d0b1-e111-a5b9-78e7d1652028</WebResourceId>
       <Name>opportunity_ribbon.js</Name>
