--- a/CrmPackage/CrmPackage.csproj
+++ b/CrmPackage/CrmPackage.csproj
@@ -1316,6 +1316,7 @@
       <DisplayName>Opportunity Wizard JS</DisplayName>
       <UniqueName>arup_OppoWiz.js</UniqueName>
       <WebResourceType>Script</WebResourceType>
+      <Description>2628</Description>
     </CRMWebResource>
     <CRMWebResource Include="WebResources\Script %28JScript%29\Contact_main_library.js">
       <DisplayName>Contact_main_library</DisplayName>
