Move arup_oppowiz toOpportunity folder

--- a/CrmPackage/CrmPackage.csproj
+++ b/CrmPackage/CrmPackage.csproj
@@ -1342,12 +1342,6 @@
       <UniqueName>new_ccrm_MultiEntityLookup</UniqueName>
       <WebResourceType>Script</WebResourceType>
     </CRMWebResource>
-    <CRMWebResource Include="WebResources\Script %28JScript%29\arup_OppoWiz.js">
-      <DisplayName>Opportunity Wizard JS</DisplayName>
-      <UniqueName>arup_OppoWiz.js</UniqueName>
-      <WebResourceType>Script</WebResourceType>
-      <Description>2628</Description>
-    </CRMWebResource>
     <CRMWebResource Include="WebResources\Script %28JScript%29\BidReview\arup_bidReviewTabs.html">
       <DisplayName>arup_bidReviewTabs</DisplayName>
       <UniqueName>new_arup_bidReviewTabs</UniqueName>
@@ -1412,6 +1406,11 @@
       <DisplayName>arup_opportunitybuttons</DisplayName>
       <UniqueName>arup_opportunitybuttons.html</UniqueName>
       <WebResourceType>WebPage</WebResourceType>
+    </CRMWebResource>
+    <CRMWebResource Include="WebResources\Script %28JScript%29\Opportunity\arup_OppoWiz.js">
+      <DisplayName>Opportunity Wizard JS</DisplayName>
+      <UniqueName>arup_OppoWiz.js</UniqueName>
+      <WebResourceType>Script</WebResourceType>
     </CRMWebResource>
     <CRMWebResource Include="WebResources\Script %28JScript%29\Opportunity\opportunity_ribbon.js">
       <DisplayName>opportunity_ribbon</DisplayName>
@@ -1512,11 +1511,6 @@
       <DisplayName>arup_documentsFolder.js</DisplayName>
       <UniqueName>arup_documentsFolder.js</UniqueName>
       <WebResourceType>Script</WebResourceType>
-    </CRMWebResource>
-    <CRMWebResource Include="WebResources\Script (JScript)\arup_FOP_Main_Library.js">
-      <DisplayName>arup_FOP_Main_Library</DisplayName>
-      <UniqueName>arup_arup_FOP_Main_Library</UniqueName>
-      <WebResourceType>NotSupported</WebResourceType>
     </CRMWebResource>
     <CRMWebResource Include="WebResources\Script %28JScript%29\arup_frameworksecured_library.js">
       <DisplayName>arup_frameworksecured_library.js</DisplayName>
