--- a/CrmPackage/CrmPackage.csproj
+++ b/CrmPackage/CrmPackage.csproj
@@ -1314,7 +1314,7 @@
     </CRMWebResource>
     <CRMWebResource Include="WebResources\Script %28JScript%29\All Other Entities\arup_Team_Main_Library.js">
       <DisplayName>arup_Team_Main_Library</DisplayName>
-      <UniqueName>arup_arup_Team_Main_Library</UniqueName>
+      <UniqueName>arup_Team_Main_Library.js</UniqueName>
       <WebResourceType>Script</WebResourceType>
     </CRMWebResource>
     <CRMWebResource Include="WebResources\Script %28JScript%29\All Other Entities\arup_WhatsNewPage.htm">
