--- a/CrmPackage/CrmPackage.csproj
+++ b/CrmPackage/CrmPackage.csproj
@@ -1307,9 +1307,19 @@
       <UniqueName>arup_Contact</UniqueName>
       <WebResourceType>PNG</WebResourceType>
     </CRMWebResource>
+    <CRMWebResource Include="WebResources\Script %28JScript%29\All Other Entities\arup_exitFormFunctions.js">
+      <DisplayName>Common Exit Functions library</DisplayName>
+      <UniqueName>arup_exitFormFunctions.js</UniqueName>
+      <WebResourceType>Script</WebResourceType>
+    </CRMWebResource>
     <CRMWebResource Include="WebResources\Script %28JScript%29\All Other Entities\arup_FOP_Main_Library.js">
       <DisplayName>arup_FOP_Main_Library</DisplayName>
       <UniqueName>new_arup_FOP_Main_Library</UniqueName>
+      <WebResourceType>Script</WebResourceType>
+    </CRMWebResource>
+    <CRMWebResource Include="WebResources\Script %28JScript%29\All Other Entities\arup_projectparticipant_library.js">
+      <DisplayName>arup_projectparticipant_library</DisplayName>
+      <UniqueName>arup_projectparticipant_library</UniqueName>
       <WebResourceType>Script</WebResourceType>
     </CRMWebResource>
     <CRMWebResource Include="WebResources\Script %28JScript%29\All Other Entities\arup_Team_Main_Library.js">
@@ -1540,11 +1550,6 @@
     <CRMWebResource Include="WebResources\Script (JScript)\arup_Phonecall_Main_Library.js">
       <DisplayName>arup_Phonecall_Main_Library</DisplayName>
       <UniqueName>arup_arup_Phonecall_Main_Library</UniqueName>
-      <WebResourceType>NotSupported</WebResourceType>
-    </CRMWebResource>
-    <CRMWebResource Include="WebResources\Script (JScript)\arup_projectparticipant_library.js">
-      <DisplayName>arup_projectparticipant_library</DisplayName>
-      <UniqueName>arup_arup_projectparticipant_library</UniqueName>
       <WebResourceType>NotSupported</WebResourceType>
     </CRMWebResource>
     <CRMWebResource Include="WebResources\Script (JScript)\arup_Task_Main_Library.js">
