--- a/CrmPackage/CrmPackage.csproj
+++ b/CrmPackage/CrmPackage.csproj
@@ -1307,6 +1307,16 @@
       <UniqueName>arup_Contact</UniqueName>
       <WebResourceType>PNG</WebResourceType>
     </CRMWebResource>
+    <CRMWebResource Include="WebResources\Script (JScript)\All Other Entities\arup_alert.js">
+      <DisplayName>Alert library</DisplayName>
+      <UniqueName>arup_alerts.js</UniqueName>
+      <WebResourceType>Script</WebResourceType>
+    </CRMWebResource>
+    <CRMWebResource Include="WebResources\Script %28JScript%29\All Other Entities\arup_Appointment_Main_Library.js">
+      <DisplayName>arup_Appointment_Main_Library</DisplayName>
+      <UniqueName>arup_Appointment_Main_Library.js</UniqueName>
+      <WebResourceType>Script</WebResourceType>
+    </CRMWebResource>
     <CRMWebResource Include="WebResources\Script %28JScript%29\All Other Entities\arup_exitFormFunctions.js">
       <DisplayName>Common Exit Functions library</DisplayName>
       <UniqueName>arup_exitFormFunctions.js</UniqueName>
@@ -1500,11 +1510,6 @@
     <CRMWebResource Include="WebResources\Script (JScript)\arup_Activities_Common_Library.js">
       <DisplayName>Activities_Common_Library</DisplayName>
       <UniqueName>arup_Activities_Common_Library</UniqueName>
-      <WebResourceType>NotSupported</WebResourceType>
-    </CRMWebResource>
-    <CRMWebResource Include="WebResources\Script (JScript)\arup_Appointment_Main_Library.js">
-      <DisplayName>arup_Appointment_Main_Library</DisplayName>
-      <UniqueName>arup_Appointment_Main_Library</UniqueName>
       <WebResourceType>NotSupported</WebResourceType>
     </CRMWebResource>
     <CRMWebResource Include="WebResources\Script (JScript)\arup_ContactTemp.js">
