--- a/CrmPackage/CrmPackage.csproj
+++ b/CrmPackage/CrmPackage.csproj
@@ -1307,6 +1307,11 @@
       <UniqueName>arup_Contact</UniqueName>
       <WebResourceType>PNG</WebResourceType>
     </CRMWebResource>
+    <CRMWebResource Include="WebResources\Script %28JScript%29\All Other Entities\arup_feedback.js">
+      <DisplayName>arup_feedback</DisplayName>
+      <UniqueName>new_arup_feedback</UniqueName>
+      <WebResourceType>Script</WebResourceType>
+    </CRMWebResource>
     <CRMWebResource Include="WebResources\Script (JScript)\All Other Entities\arup_alert.js">
       <DisplayName>Alert library</DisplayName>
       <UniqueName>arup_alerts.js</UniqueName>
